--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore secrets file 
+# I want to keep my secrets secrets
 /config/secrets.yml
+
