--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "MyTruePortfolioOk",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.3.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
