--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  development:
+  adapter: postgresql
+  encoding: unicode
+  database: demo_test_development
+  pool: 5
+  username: dave
+  password:
+  timeout: 5000
