--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
@@ -21,11 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  development:
-  adapter: postgresql
-  encoding: unicode
-  database: demo_test_development
-  pool: 5
-  username: dave
-  password:
-  timeout: 5000
+  <<: *default
+  database: db/production.sqlite3
